--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 #main {
-  position: absolute;
   background-color: #fcdcad;
   min-height: 100vh;
-  width: 100vw;
+  min-width: 100%;
+}
+
+#page {
+  height: fit-content;
+  padding-bottom: 175px;
 }
