--- a/src/CV/CV.css
+++ b/src/CV/CV.css
@@ -31,20 +31,39 @@
     font: normal normal normal 80px/1.2em 'noticia text',serif;
     margin: 0;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 28px;
+    margin-bottom: 25px;
     line-height: normal;
     letter-spacing: normal;
-}
-
-#main-panel hr
-{
-    margin-bottom: 25px;
+    border-bottom: 1px solid #5fa7c2;
 }
 
 #side-panel h6
 {
     font: normal normal normal 17px 'Noticia Text',serif;
-    margin: 0px 0px 20px 0px;
+    margin: 0 0 20px 0;
+    padding: 0px 0px 10px 0px;
+    border-bottom: 1px solid #5fa7c2;
+}
+
+#side-panel p, #side-panel li, #side-panel ul, .body-listing ul, .body-listing li, .body-listing p
+{
+    font: normal normal normal 13px/1.2em 'Open Sans',sans-serif; 
+    line-height: normal;
+    margin: 0;
+}
+
+.body-listing ul, .body-listing li, .listing-text
+{
+    line-height: 1.85em !important;
+}
+
+#side-panel .sub-text
+{
+    font: normal normal normal 10px/1.2em 'Open Sans',sans-serif;
+    margin: 0;
+    padding-top: 5px;
+    padding-bottom: 15px; 
 }
 
 .icon
@@ -64,34 +83,6 @@
 {
     width: 75%;
     height: 75%;
-}
-
-.main-section .title-section
-{
-    display: flex;
-    width: 120px;
-    height: 120px;
-    background-color: #747575;
-    border-radius: 50%;
-    color: white;
-    justify-content: center;
-    align-items: center;
-}
-
-.title-section .text
-{
-    width: 105px;
-}
-
-.title-section .text h6
-{
-    font: normal normal normal 17px 'Noticia Text',serif;
-    margin: 0;
-}
-
-.side-section
-{
-
 }
 
 /*
