--- a/src/CV/CV.css
+++ b/src/CV/CV.css
@@ -1,6 +1,7 @@
 #cv-wrapper
 {
     display: flex;
+    height: fit-content;
     width: 1000px;
     max-width: 100%;
     margin: auto;
@@ -12,16 +13,15 @@
 {
     float: left;
     width: 78%;
-    height: 500px;
+    height: fit-content;
     padding: 0px 50px 0px 75px;
-    /*background-color: grey;*/
 }
 
 #side-panel
 {
     float:right;
     width: 22%;
-    height: 500px;
+    height: fit-content;
     padding: 165px 100px 0px 0px;
 
 }
@@ -84,10 +84,3 @@
     width: 75%;
     height: 75%;
 }
-
-/*
-.test
-{
-    height: 500px;
-    background-color: grey;
-}*/
