--- a/src/CV/MainSection.css
+++ b/src/CV/MainSection.css
@@ -2,6 +2,9 @@
 {
     display: inline-flex;
     width: 100%;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #5fa7c2;
+    margin-bottom: 25px;
 }
 
 .main-section .title-section
@@ -35,14 +38,9 @@
     margin: 0;
 }
 
-.not-bottom
-{
-    padding-bottom: 20px;
-    border-bottom: 1px solid #5fa7c2;
-    margin-bottom: 25px;
-}
-
 .bottom
 {
-    padding-bottom: 175px;
+    padding: 0;
+    margin: 0;
+    border-bottom: none;
 }
