--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
 	min-height:100%;
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Open Sans'
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Open Sans', 'Noticia Text'
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -27,4 +27,5 @@ code {
 .font-1 { font: normal normal normal 13px/1.2em 'Open Sans',sans-serif; line-height: normal;}
 .font-2 { font: normal normal normal 16px/1.2em 'open sans',sans-serif; line-height: normal;}
 .font-3 { font: normal normal normal 17px/1.2em 'noticia text',serif; line-height: normal;}
-.font-4 { font: normal normal normal 19px/1.2em 'noticia text',serif;}
+.font-4 { font: normal normal normal 19px/1.2em 'noticia text',serif; }
+.font-5 { font: normal normal normal 80px/1.2em 'noticia text',serif; }
