--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ code {
 .font-bold { font-size: bold }
 
 .font-1 { font: normal normal normal 13px/1.2em 'Open Sans',sans-serif; line-height: normal;}
-.font-2 { font: normal normal normal 16px/1.2em 'open sans',sans-serif; line-height: normal;}
+.font-2 { font: normal normal normal 16px/1.2em 'Open Sans',sans-serif; line-height: normal;}
 .font-3 { font: normal normal normal 17px/1.2em 'noticia text',serif; line-height: normal;}
 .font-4 { font: normal normal normal 19px/1.2em 'noticia text',serif; }
 .font-5 { font: normal normal normal 80px/1.2em 'noticia text',serif; }
