--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,16 +1,37 @@
 .wrapper {
-    width: fit-content;
-    max-width: 80%;
+    max-width: 90%;
     margin: auto;
     padding: 0px 0px;
+}
+
+#container 
+{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    height: fit-content;
+}
+
+#container > div 
+{ 
+    margin: 20px;
+    max-width: 40%;
+    height: fit-content;
 }
 
 #profile
 {
     border-radius: 50%;
-    margin-top: 50px;
-    max-width: 75vw;
+    max-width: 100%;
+    margin-top: auto;
+    margin-bottom: auto;
     height: auto;
+}
+
+#intro-text > p
+{
+    width: 100%;
 }
 
 .noticia-font
@@ -18,14 +39,15 @@
     font-family: 'Noticia Text', serif;
     color: #006990;
 }
-
-.font_3 { font-size: 4.5vw; margin: 0; }
-
-.font_4 { font-size: 3vw; margin: 0; font-weight: normal; }
+.font_3 { font-size: calc(100% + 3.4vw); margin: 0; }
+.font_4 { font-size: calc(100% + 2vw); margin: 0; font-weight: normal; }
 
 .link-circles
 {
-    margin: 20px 0px;
+    display: flex;
+    justify-content: letft;
+    flex-wrap: wrap;
+    margin: 10px 0px;
 }
 
 .circle
@@ -35,10 +57,18 @@
     align-items: center;
     border-radius: 50%;
     color: white;
-    height: 130px;
-    max-height: 25vw;
-    width: 130px;
-    max-width: 25vw;
+
+    margin: 10px 20px;
+
+    min-width: 100px;
+    min-height: 100px;
+
+    height: 10vw;
+    width: 10vw;
+    /* max-height: 50vw;
+    max-width: 50vw; */
+    max-height: 130px;
+    max-width: 130px;
 
     -moz-transition: all .2s ease-in;
     -o-transition: all .2s ease-in;
